# offsec-shield

./: .gitignore  .gitlab-ci.yml  AGENT.md  CLAUDE.md  CONTINUATION_SESSION_SUMMARY.md  E2E_VALIDATION_CHECKLIST.md  LICENSE  MILESTONE_CONSOLE_ALIGNMENT.md  Makefile  QUICK_OPERATIONAL_CHECK.md  README.md  UPDATED_TOPOLOGY_2025-11-28.md  docker-compose.override.wg.yml  docker-compose.yml
.codex/prompts/: docs_receipt_entry.md  python_bruteforce_detector.md  release_offsec_shield.md  rust_ingest_route.md  ui_threat_stream.md
.github/workflows/: ci.yml  security.yml  (+2 more)
apps/guardian/: Dockerfile  README.md  pyproject.toml  pytest.ini
apps/guardian/guardian/: __init__.py  action_server.py  capability.py  client.py  config.py  main.py  models.py
apps/guardian/guardian/actions/: __init__.py  alert_human.py  base.py  block_ip.py  quarantine.py
apps/guardian/guardian/detectors/: __init__.py  anomaly_simple.py  base.py  brute_force.py  scanner.py
apps/guardian/guardian/log_sources/: firewall.py  nginx.py  portal.py  ssh.py
apps/guardian/tests/: test_client.py  test_detectors.py  test_health.py
apps/mesh-daemon/: README.md  pyproject.toml
apps/mesh-daemon/mesh_daemon/: __init__.py  main.py
apps/portal-ext/: Cargo.toml  Dockerfile  README-ops.md
apps/portal-ext/src/: capabilities.rs  config.rs  lib.rs  main.rs  merkle.rs  models.rs  offsec_ledger.rs  receipts.rs
apps/portal-ext/src/mesh/: envelope.rs  mod.rs  util.rs
apps/portal-ext/src/routes/: action.rs  action_apply.rs  action_update.rs  anchor.rs  ingest.rs  mesh_proof.rs  mesh_root.rs  mod.rs  proof.rs
apps/portal-ext/src/ws/: mod.rs  stream.rs
apps/portal-ext/tests/: capability_auth_tests.rs  capability_roundtrip.rs  ingest_action_tests.rs  receipt_tests.rs
apps/root-watcher/: README.md  pyproject.toml
apps/root-watcher/root_watcher/: __init__.py  main.py
config/: OPENGUARD.md  OPENGUARD_QUICKREF.txt  OPENGUARD_SUMMARY.md  dev.example.toml  logging.yaml  mesh-peers-full.env  openguard.yaml  prod.example.toml
demo/: DEMO_GUIDE.md  mesh-verify.sh  run_demo.sh  run_incident.sh  tmux_demo.sh
docs/: ARCHITECTURE.md  CUSTOMERS.md  EVENTS.md  GUARDIAN_BINDING.md  INCIDENT_PLAYBOOKS.md  MESH_DEPLOYMENT.md  MESH_SPEC.md  OPERATOR_HANDBOOK.md  PROOF_BUNDLE.md  ROADMAP.md  SPEC.md
gemma/: NODE_ROLES.md  bootstrap-beta.sh  bootstrap-dns-gamma.sh  mesh-peers.env
integration/: offsec_event_demo.py  offsec_event_demo_authtoken.py
ops/: bootstrap-beta.sh  bootstrap-bunker.sh  configure-mesh-peers.sh  generate-mesh-keys.sh
scripts/: apply-security-patches.sh  dev-down.sh  dev-up.sh  format.sh  guard-ready-watchdog.sh  inject-test-event.sh  root_watcher.py  sanity-check.sh  security-audit.sh  test.sh  validate-openguard.py
tools/: make_capability.py
(+70 files in other folders)
